--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
-    "@radix-ui/react-avatar": "^1.1.10",
     "@mapbox/search-js-react": "^1.1.0",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
@@ -21,6 +21,7 @@
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@react-oauth/google": "^0.12.2",
+    "@stripe/react-stripe-js": "^3.7.0",
     "@types/cheerio": "^1.0.0",
     "@types/mapbox__mapbox-gl-geocoder": "^5.0.0",
     "@types/mapbox-gl": "^3.4.1",
@@ -29,11 +30,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.9.1",
-    "framer-motion": "^12.18.1",
-    "i18n-iso-countries": "^7.14.0",
     "firebase-admin": "^13.4.0",
     "framer-motion": "^12.18.1",
     "groq-sdk": "^0.25.0",
+    "i18n-iso-countries": "^7.14.0",
     "lucide-react": "^0.519.0",
     "mapbox-gl": "^3.13.0",
     "next": "15.3.4",
