--- a/package.json
+++ b/package.json
@@ -25,19 +25,23 @@
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.3.1",
     "@types/cheerio": "^1.0.0",
-    "@types/mapbox-gl": "^3.4.1",
+    "@types/formidable": "^3.4.5",
     "@types/mapbox__mapbox-gl-geocoder": "^5.0.0",
+    "@types/mapbox-gl": "^3.4.1",
+    "@types/multer": "^1.4.13",
     "axios": "^1.10.0",
     "cheerio": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.9.1",
     "firebase-admin": "^13.4.0",
+    "formidable": "^3.5.4",
     "framer-motion": "^12.18.1",
     "groq-sdk": "^0.25.0",
     "i18n-iso-countries": "^7.14.0",
     "lucide-react": "^0.519.0",
     "mapbox-gl": "^3.13.0",
+    "multer": "^2.0.1",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "puppeteer": "^24.10.2",
