--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "puppeteer": "^24.10.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.58.1",
     "react-icons": "^5.5.0",
     "resend": "^4.6.0",
